<resources>
    <string name="ad_unit_id">ca-app-pub-5457814521212454/12345678</string>
    <string name="banner_ad_unit_id">ca-app-pub-5457814521212454/12345678</string>
    //Google Production Account
    // Change below google client id to use Development/Production authentication for Google
    <string name="google_client_id_release">12345678-asdfasdfghasdfasdfgh.apps.googleusercontent.com</string>
    <string name="google_client_id">@string/google_client_id_release</string>
    <string name="camera_activity_permission_denied_toast">Please go to app settings and grant camera permission</string>
    <string name="finding_rect">Use darker background</string>
    <string name="move_closer">Move closer</string>
    <string name="hold_still">Hold still</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Scanr</string>
    <string name="str_camera_screen_instruction">Please centre the focus icon in the \nmiddle of the code to scan</string>
    <string name="permission_camera_rationale">Access to the camera is needed for barcode detection.</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="pin_label_text">SET PIN</string>
    <string name="UploadError">"No available free space,You have used 20MB Space"</string>
    <string name="internetConnectionFail">"Please check internet connection!!!"</string>
    <string name="SomethingWentWrong">"Oops Something went wrong!!"</string>
    <string name="SyncMessage">"Connect internet to store your data in cloud storage for security.."</string>
    <string name="title_menu_files">My Files</string>
    <string name="title_menu_settings">Settings</string>
    <string name="str_sync_to_cloud">Sync to cloud</string>
    <string name="str_share_the_app">Share this app</string>
    <string name="str_upgrade_pro">Upgrade to Scanr pro</string>
    <string name="str_subscribed_pro">Scanr pro</string>
    <string name="str_scanned_text">Scanned Text</string>
    <string name="str_thanks_for_subscription">Thanks for your subscription.</string>
    <string name="str_already_subscribed">You have already subscribed for Scanr pro</string>
    <string name="title_activity_scan_doc">ScanDocActivity</string>
    <string name="title_adjustment">Adjustment</string>
    <string name="title_arrange">Arrange page sequence</string>
    <string name="str_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="new_intro_text_1">DSM scans your cards, passport, docs with machine learning enabled computer vision to give you clear copies.</string>
    <string name="new_intro_text_2">We never access your personal data. We store your data on G-Drive securely, so that it can be easily accessible.</string>
    <string name="new_intro_text_3">Experience Scanr with pro features like No advertisement, No watermark, Sign your documents, Text recognition.</string>
    <string name="str_title1">Scan With machine learning</string>
    <string name="str_title2">Securely store to your device</string>
    <string name="str_title3">Scanr Pro</string>
    <string name="str_walk_through_button1">Next</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of the app is available. Please update to version\s</string>
    <string name="update">Update</string>
    <string name="not_now">Not now</string>
    <string name="never">Never</string>
    <string name="mydoc_title">My Documents</string>
    <string name="tab_to_scan">Tap on camera to scan card </string>
    <string name="str_note_drive_connection">"Don't loose your document "Connect Drive and Sync on Cloud Always !!</string>
    <string name="str_note_drive">Don\'t loose your files. Sync to cloud !</string>
    <string name="scan_gallery">Scan Gallery Image</string>
    <string name="scan_document">Scan Document</string>
    <string name="scan_business_card">Business Card Scan</string>
    <string name="scan_barcode">Scan Barcode &amp; Qr Code</string>
    <string name="scan_creditcard">Credit Card Scan</string>
    <string name="scan_aadharcard">Aadhaar Card Scan</string>
    <string name="scan_pancard">Pan Card Scan</string>
    <string name="scan_passport">Passport Scan </string>
    <string name="scan_licence">Driving Licence Scan</string>
    <string name="all_files">My Files</string>
    <string name="err_select_format">Please select format</string>
    <string name="share_app">Share App</string>
    <string name="enter_pin">ENTER PIN</string>
    <string name="reenter_pin">RE-ENTER PIN</string>
    <string name="error_pin">PIN DOES NOT MATCH!!!! RE-ENTER PIN</string>
    <string name="error_wrong_pin">Wrong PIN!!</string>
    <string name="error_camera_permission">App does not have permission to access camera</string>
    <string name="camera_move_forward">Move Forward</string>
    <string name="camera_move_backward">Move Back</string>
    <string name="camera_permission_access">Please grant permissions to access the camera</string>
    <string name="storage_permission_access">Storage permission is required to scan gallery image</string>
    <string name="storage_permission_for">In the next screen we will ask for storage permission. We will need it to store your document in your device. Please allow.</string>
    <string name="camera_permission_for">In the next screen we will ask for camera permission. We will need it to scan your files. Please allow.</string>
    <string name="camera_permission_for_title">We will need camera permission to scan your files. Please allow.</string>
    <string name="click_back_exit">Please click BACK again to exit</string>
    <string name="save">Save</string>
    <string name="hint">Hint</string>
    <string name="capture">Capture</string>
    <string name="try_again">Try Again</string>
    <string name="str_scanr_tag_line">Scan, Manage Documents, OCR, PDF</string>
    <string name="scanr_intro">Scanr | Scan crystal clear documents and easily store to your Google Drive</string>
    <string name="str_version">Version:</string>
    <string name="str_support_email">For support please email at</string>
    <string name="support_email">support@sevenbits.in</string>
    <string name="str_rights_reserved">All rights reserved.</string>
    <string name="str_product_from">A product from</string>
    <string name="str_company_name">Seven Bits Technologies LLP</string>
    <string name="company_website_link">https://www.sevenbits.in</string>
    <string name="str_contact_email">contact@sevenbits.in</string>
    <string name="str_help">Help</string>
    <string name="error_camera_permission2">App doesn\'t have permission to access camera. You can change app permission.</string>
    <string name="change_surface_message">Please change the surface if it is not scanning proper..</string>
    <string name="error_no_required_permission">Sorry! but app does not have required permissions! Please grant it from settings</string>
    <string name="error_storage_permission">App does not have the permission to access storage</string>
    <string name="auth_success">Authentication success.</string>
    <string name="auth_failure">Authentication failure! Please try again.</string>
    <string name="auth_failure2">Authentication failed.</string>
    <string name="confirm_descard">Are you sure you want to cancel?</string>
    <string name="error_scan_info">Enter scan info</string>
    <string name="error_mobile_number">Enter valid number</string>
    <string name="error_licence_number">Enter valid licence Number</string>
    <string name="error_creditcard_number">Invalid credit card number</string>
    <string name="msg_please_wait">Please wait…</string>
    <string name="hint_expiry">Expiry date</string>
    <string name="hint_card_type">Card type</string>
    <string name="error_invalid_qr">Invalid Barcode or Qr code</string>
    <string name="no_content_share">No available any content for sharing..</string>
    <string name="error_incorrect_date">Something went wrong with the dates. Please choose correct dates</string>
    <string name="success_saved_info">Your information saved successfully…</string>
    <string name="confirm_delete">Are you sure you want to delete?</string>
    <string name="error_something_wrong">Oops Something went wrong..</string>
    <string name="error_no_card">No card available..</string>
    <string name="str_permission_required">Permissions required</string>
    <string name="str_title_drive">Drive Integration</string>
    <string name="str_drive_permission">Would you like to integrate this app with your google drive to securely save your important documents?</string>
    <string name="str_str_drive_permission_later">May be later</string>
    <string name="str_new_drive_permission">In next screen we will show Google Drive connect screen. Please allow permission to connect. It is required to save your documents automatically to your google Drive.</string>
    <string name="str_drive_permission_checkbox">Allow your documents to be synced in Google Drive</string>
    <string name="str_drive_sync_enable_msg">Google Drive Synchronization is enabled.</string>
    <string name="str_drive_sync_disable_msg">Google Drive Synchronization is disabled.</string>
    <string name="str_failed_drive_integration">Failed to map google drive integration.</string>
    <string name="text_pro"><u>Or continue with limited version</u></string>
    <string name="expired_sub">"Your subscription is expired."</string>
</resources>
