<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/intro_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:src="@drawable/walkthrough1"
        app:layout_constraintBottom_toTopOf="@id/text_layout"
        app:layout_constraintHeight_percent="0.50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_next_slide"
        app:layout_constraintTop_toBottomOf="@id/intro_image">

        <TextView
            android:id="@+id/intro_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans"
            android:gravity="center"
            android:text="@string/str_title1"
            android:textColor="@color/dark_gray"
            android:textFontWeight="700"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/intro_desc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />

        <TextView
            android:id="@+id/intro_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/opensans"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/new_intro_text_1"
            android:textColor="@color/light_gray"
            android:textFontWeight="400"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85">

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next_slide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_ripple_effect"
        android:fontFamily="@font/opensans"
        android:text="@string/str_walk_through_button1"
        android:textAllCaps="false"
        android:textColor="@color/primary_blue_text_bg"
        android:textFontWeight="600"
        android:textSize="20sp"
        app:backgroundTint="@null"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintWidth_percent="0.80" />

</androidx.constraintlayout.widget.ConstraintLayout>